[tool.poetry]
name = "popbot"
version = "0.1.0"
description = "bot discord"
authors = ["chahyn <chahynfg@gmail.com>"]

# Correction de la section packages (doit être un array)
[tool.poetry.packages]
includes = [
    {include = "popbot", from = "."}     # Si votre code est directement dans popbot/
]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = ">=2.5.2"
flask = ">=3.1.1"
pytz = ">=2025.2"
requests = ">=2.32.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

